# test_net

./: .gitignore  pyproject.toml
lgnet/: ReadMe.md  data_loader.py  model.py  model_test.py  mytoken.py  train.py
