[tool.poetry]
name = "lgnet"
version = "0.1.0"
description = ""
authors = ["lili <xdu2814031084@1163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
scikit-image = "^0.24.0"
matplotlib = "^3.9.2"
torchvision = "^0.19.1"
opencv-python = "^4.10.0.84"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
